initial commit for Longformer and Big Bird

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,4 @@
-best_model.pt
-model_checkpoint.pth
-consumer_complaints.csv
-data.csv
-data.csv
-model1_no_textrank.pth
-model1_with_textrank.pth
-database.sqlite
-model2_no_textrank.pth
-model2_with_textrank.pth
+*.csv
+*.pth
+*.pt
+*.sqlite
